# eliprompt

./: Cargo.toml  LICENSE  README.md
src/: block.rs  color.rs  config.rs  env.rs  err.rs  lib.rs  main.rs  style.rs  symbol.rs
src/block/: elapsed.rs  exit_code.rs  exit_status_symbol.rs  git_head.rs  git_path.rs  hostname.rs  newline.rs  or.rs  pwd.rs  separated.rs  sequence.rs  space.rs  styled.rs  text.rs  username.rs
