[package]
name = "eliprompt"
version = "0.2.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2018"
description = "Elegant and informative shell prompt"
license = "Zlib"
homepage = "https://github.com/stephaneyfx/eliprompt"
repository = "https://github.com/stephaneyfx/eliprompt.git"
readme = "README.md"
keywords = ["shell", "prompt", "zsh"]

[dependencies]
ansi_term = "0.12.1"
bs58 = "0.3.1"
dirs = "3.0.1"
git2 = "0.13.11"
humantime = "2.0.1"
humantime-serde = "1.0.1"
moniclock = "0.1.0"
once_cell = "1.4.1"
palette = "0.5.0"
rgb = "0.8.25"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
structopt = "0.3.19"
strum = { version = "0.19.5", features = ["derive"] }
thiserror = "1.0.21"
