[package]
name = "eliprompt"
version = "0.3.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2021"
description = "Elegant and informative shell prompt"
license = "0BSD"
homepage = "https://github.com/stephaneyfx/eliprompt"
repository = "https://github.com/stephaneyfx/eliprompt.git"
keywords = ["shell", "prompt", "zsh"]

[dependencies]
ansi_term = "0.12.1"
bs58 = "0.4.0"
clap = { version = "3.2.22", features = ["derive"] }
dirs = "4.0.0"
git2 = "0.15.0"
humantime = "2.1.0"
humantime-serde = "1.1.1"
moniclock = "0.1.0"
once_cell = "1.14.0"
palette = "0.6.1"
rgb = "0.8.34"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.35"
tracing = "0.1.36"
whoami = "1.2.3"
