[package]
name = "eliprompt"
version = "0.3.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2021"
description = "Elegant and informative shell prompt"
license = "MIT"
homepage = "https://github.com/stephaneyfx/eliprompt"
repository = "https://github.com/stephaneyfx/eliprompt.git"
keywords = ["shell", "prompt", "zsh"]

[dependencies]
ansi_term = "0.12.1"
bs58 = "0.5.0"
clap = { version = "4.4.18", features = ["derive"] }
dirs = "5.0.1"
git2 = "0.18.1"
humantime = "2.1.0"
humantime-serde = "1.1.1"
moniclock = "0.1.0"
once_cell = "1.19.0"
palette = "0.7.3"
rgb = "0.8.37"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.56"
tracing = "0.1.40"
whoami = "1.4.1"
